# Medical-Transcript-Classifier

./: README.md  error.txt  main.py  notebook_dump.txt  nvidia.txt  output.json  pyproject.toml  training.ipynb  venv_error.txt
